--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "laravel-echo": "^1.10.0",
+        "pusher-js": "^7.0.3",
         "vue-chat-scroll": "^1.4.0",
         "yarn": "^1.22.10"
     }
